--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,16 @@ markdown_extensions:
   - codehilite
   - toc:
       permalink: true
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  
 extra:
   social:
   - icon: fontawesome/brands/github
     link: https://github.com/SEKOIA-IO/threatscope
+plugins:
+  - search
+  - mermaid2
